# mini-redis

./: .gitignore  CMakeLists.txt  Readme.md
src/: CLI.cpp  CLI.h  Command.h  CommandExecutor.cpp  CommandExecutor.h  Parser.cpp  Parser.h  Storage.cpp  Storage.h  main.cpp  redis_server
tests/: test_client.cpp
